# streamlit_docker

./: Dockerfile  README.md  docker-compose.yml  main.py  pyproject.toml
