[tool.poetry]
name = "app"
version = "0.1.0"
description = ""
authors = ["yolo_kiyoshi"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"
pandas = "^2.2.3"
streamlit = "^1.40.1"
matplotlib = "^3.9.2"
seaborn = "^0.13.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
